--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="container">
-      <div class="row">
+      <div id="leftSide" class="justify-content-center row">
         <div class="col-sm-12 col-md-3">
           <form id="cityForm">
             <div class="form-group">
@@ -68,7 +68,7 @@
           <hr>
           <div id="searchHistoryButtons"></div>
         </div>
-        <div class="col-sm-12 col-md-9">
+        <div id="hide" class="d-none col-sm-12 col-md-9">
           <div id="currentWeather" class="border">
             <h4 id="currentCity">City</h4>
             <div>Temp: <span id="currentTemp"></span>&deg;F</div>
